my laptop is dying :D, so push before it's dead

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -375,7 +375,7 @@ input { &::-ms-clear { display: none; } }
   position: fixed;
   width: 100%;
   height: 90px;
-  z-index: 11;
+  z-index: 10001;
 
   &__inner {
     display: flex;
@@ -672,7 +672,7 @@ input { &::-ms-clear { display: none; } }
           color: black;
           border: none;
           width: 100%;
-          min-width: 105px;
+          min-width: 100px;
 
           &.vs {
             &--open {
@@ -1142,6 +1142,35 @@ input { &::-ms-clear { display: none; } }
     &__img {
       margin-left: -91px;
       width: 100vw;
+    }
+
+    &-inner {
+      overflow: hidden;
+      display: flex;
+      width: 100%;
+      max-width: 100vw;
+    }
+
+    &__return {
+      position: absolute;
+      top: 12px;
+      left: 12px;
+      width: 30px;
+      height: 30px;
+      background: white;
+      border: none;
+      @include flex-center;
+      z-index: 10000;
+      border-radius: 50%;
+      box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
+
+      &:focus {
+        outline: none;
+      }
+
+      img {
+        padding-left: 2px;
+      }
     }
   }
 
@@ -4108,6 +4137,7 @@ input { &::-ms-clear { display: none; } }
 
   [class*="ymaps-"][class*="-map"] {
     max-width: 100%;
+    width: auto !important;
   }
 
   &-popup {
@@ -4452,14 +4482,6 @@ input { &::-ms-clear { display: none; } }
   &__beach-icon {
     width: 27px;
     height: 38px;
-    background-image: url('../../static/pics/global/svg/map_beach_blue.svg');
-    background-repeat: no-repeat;
-    background-position: center;
-
-
-    &.active {
-      background-image: url('../../static/pics/global/svg/map_beach_gold.svg');
-    }
   }
 }
 
@@ -4473,10 +4495,6 @@ input { &::-ms-clear { display: none; } }
     position: relative;
     margin-bottom: 35px;
   }
-}
-
-.overlay-map {
-  overflow: hidden;
 }
 
 .event-page {
