--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1648,6 +1648,8 @@ input {
         position: fixed;
         top: 95px;
         left: 0;
+        background: white;
+        height: 37px;
         max-width: 100vw;
         margin: 0 !important;
         z-index: 10;
