--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1646,10 +1646,10 @@ input {
     }
     &-sections {
         position: fixed;
-        top: 95px;
+        top: 90px;
         left: 0;
         background: white;
-        height: 37px;
+        height: 50px;
         max-width: 100vw;
         margin: 0 !important;
         z-index: 10;
@@ -1685,6 +1685,7 @@ input {
                         margin-bottom: 15px;
                         width: 100%;
                         .swiper-wrapper {
+                            margin-top: 10px;
                             &:before {
                                 display: block;
                                 content: "";
@@ -5066,7 +5067,7 @@ input {
             }
         }
         &-sections {
-            top: 74px;
+            top: 60px;
         }
         &__sections {
             &__section {
