--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -4154,6 +4154,7 @@ input { &::-ms-clear { display: none; } }
     padding-bottom: 12px;
     width: 300px;
     position: relative;
+    box-shadow: 6px 12px 16px rgba(0, 0, 0, 0.2);
 
     &-text {
       color: #393E48;
@@ -6374,19 +6375,26 @@ input { &::-ms-clear { display: none; } }
           width: 100%;
           position: fixed;
           left: 50%;
-          transform: translate(-50%, 100vh);
+          transform: translate(-50%, 102%);
           bottom: 0;
           transition: transform .2s ease;
           z-index: 100;
           border-radius: 12px;
           padding: 0;
+          max-height: unset;
 
           .search-page {
             &__map-area {
               &__card {
                 margin-right: 0;
+                margin-bottom: 0;
               }
             }
+          }
+
+          &.active {
+            transform: translate(-50%, 50%);
+            bottom: 50%;
           }
 
           &__close-button {
@@ -6399,12 +6407,19 @@ input { &::-ms-clear { display: none; } }
             max-height: 26px;
             min-height: 26px;
             padding: 0;
+            z-index: 1;
             background: white;
             border-radius: 50%;
             @include flex-center;
 
             &:focus {
               outline: none;
+            }
+
+            &-wrapper {
+              padding-left: 20px;
+              padding-right: 20px;
+              padding-bottom: 20px;
             }
           }
         }
@@ -8197,6 +8212,40 @@ input { &::-ms-clear { display: none; } }
     &__similar-beaches {
       .main-page__section-title {
         max-width: 200px;
+      }
+    }
+  }
+
+  .search-page {
+    &__map-area {
+      &__info-area {
+        &__modal {
+          max-width: unset;
+          width: 100%;
+          border-radius: 12px 12px 0 0;
+          z-index: 102;
+
+          &.active {
+            transform: translate(-50%, 0);
+            bottom: 0;
+          }
+
+          &-bg {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0,0,0,.5);
+            cursor: pointer;
+            z-index: 101;
+
+            &.active {
+              display: block;
+            }
+          }
+        }
       }
     }
   }
