--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -546,6 +546,48 @@ input {
   z-index: 100;
   max-width: 820px;
 
+  &__autocomplete {
+    position: absolute;
+    left: 0;
+    top: 57px;
+    width: 100%;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    background: #FFFFFF;
+    border-radius: 10px;
+
+    &__inner {
+      padding: 20px 0;
+      overflow-y: auto;
+      max-height: calc(100vh - 100px);
+    }
+
+    a, &__empty {
+      font-size: 18px;
+      line-height: 22px;
+      color: #393E48;
+      padding: 8px 25px;
+    }
+
+    &__empty {
+      opacity: .6;
+    }
+
+    a {
+      display: flex;
+      justify-content: space-between;
+      cursor: pointer;
+
+      span:first-of-type {
+        padding-right: 15px;
+      }
+
+      &:hover {
+        color: white;
+        background: #228596;
+      }
+    }
+  }
+
   &__bar,
   &__options {
     background: white;
@@ -4545,6 +4587,13 @@ input {
       z-index: 1;
     }
   }
+
+  &__sidename {
+    color: #393E48;
+    font-size: 14px;
+    line-height: 120%;
+    white-space: nowrap;
+  }
 }
 
 .card-grid {
@@ -4962,7 +5011,6 @@ input {
       }
 
       &__map-card {
-        margin-left: 10px;
         margin-bottom: 0;
 
         .map {
@@ -4998,7 +5046,7 @@ input {
 
       &__map-card,
       &__weather-card {
-        width: 50%;
+        width: 100%;
         height: 360px;
       }
     }
@@ -5575,6 +5623,10 @@ input {
     min-width: 320px;
     height: 42px;
     top: 10px;
+
+    &__autocomplete {
+      top: 44px;
+    }
 
     &__bar {
       &__input {
@@ -7371,6 +7423,10 @@ input {
     padding-right: 20px;
   }
 
+  .btn-ymaps {
+    display: flex;
+  }
+
   .custom-page {
     padding-top: 87px;
 
@@ -8514,4 +8570,46 @@ body.touch {
   html*.custom-card__beach {
     margin-bottom: 4px;
   }
+}
+
+.bounce-enter-active {
+    animation: bounce-in 0.5s;
+}
+.bounce-leave-active {
+    animation: bounce-in 0.5s reverse;
+}
+@keyframes bounce-in {
+    0% {
+        transform: scale(0);
+        height: 10px;
+    }
+
+    50% {
+        transform: scale(1.5);
+        height: 60px;
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+// .fade-enter-active,
+// .fade-leave-active {
+//     transition: opacity 1.5s;
+// }
+// .fade-enter, .fade-leave-to /* .fade-leave-active до версии 2.1.8 */ {
+//     opacity: 0;
+// }
+
+.btn-display {
+    display: block;
+}
+
+.btn-ymaps {
+  display: none;
+}
+
+@media (max-width: 680px) {
+    .btn-display {
+        display: none;
+    }
 }
