--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1031,19 +1031,15 @@ input {
       width: fit-content;
     }
 
-    &.rlt {
+    &.rtl {
       flex-direction: row-reverse;
 
       .banner {
         &__card {
           &__pic {
             &-area {
-
+              border-radius: 0 12px 12px 0;
             }
-          }
-
-          &__info-area {
-
           }
         }
       }
@@ -1153,6 +1149,7 @@ input {
         line-height: 140%;
         color: #73767d;
         margin-bottom: 35px;
+        width: 100%;
       }
 
       &__button {
@@ -1213,6 +1210,12 @@ input {
     padding-bottom: 110px;
   }
 
+  &-2, &-3 {
+    span {
+      white-space: nowrap;
+    }
+  }
+
   &-2 {
     padding-top: 65px;
     padding-bottom: 65px;
@@ -1221,6 +1224,28 @@ input {
   &-3 {
     padding-top: 60px;
     padding-bottom: 60px;
+
+    .banner {
+      &__card {
+        background: #228596;
+
+        &__info-area {
+          &__title, &__text {
+            color: white;
+          }
+
+          &__text {
+            width: 360px;
+          }
+
+          &__button {
+            &:hover {
+              border-color: #fcab2d;
+            }
+          }
+        }
+      }
+    }
   }
 }
 
@@ -2770,20 +2795,6 @@ input {
           padding-bottom: 0;
         }
       }
-
-      .main-page {
-        &__card {
-          &__info-area {
-            &__button {
-              margin-bottom: 10px;
-
-              &.bottom {
-                display: none;
-              }
-            }
-          }
-        }
-      }
     }
 
     &__bottom {
@@ -2834,6 +2845,11 @@ input {
     &__right {
       &__button {
         margin-bottom: 10px;
+
+        &.bottom {
+          margin-top: 10px;
+          display: none;
+        }
       }
     }
   }
@@ -3297,17 +3313,21 @@ input {
     z-index: 2;
     transform: translateX(50%);
 
-    button {
+    button, a {
       background: white;
       border: none;
-      margin-bottom: 15px;
+      margin: 7px 0;
       width: 50px;
       height: 50px;
       border-radius: 50%;
       @include flex-center;
       box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.1);
 
-      &:last-of-type {
+      &:first-child {
+        margin-top: 0;
+      }
+
+      &:last-child {
         margin-bottom: 0;
       }
 
@@ -4050,6 +4070,36 @@ input {
 
       &-gold {
         left: 20px;
+        position: relative;
+
+        &:hover {
+          .slider-beach-event__medal-gold__tooltip {
+            display: block;
+          }
+        }
+
+        &__tooltip {
+          display: none;
+          position: absolute;
+          bottom: -35px;
+          padding: 5px;
+          border-radius: 6px;
+          left: 0;
+          white-space: nowrap;
+          background: white;
+
+          &:after {
+            content: "";
+            position: absolute;
+            display: block;
+            left: 25px;
+            transform: translateX(-50%);
+            width: 10px;
+            height: 7px;
+            top: -7px;
+            background: url("../../static/pics/global/svg/popup_top.svg");
+          }
+        }
       }
 
       &-blue,
@@ -5138,6 +5188,10 @@ input {
         &__item {
           width: 50%;
           margin-bottom: 30px;
+
+          &:nth-last-child(-n+2) {
+            margin-bottom: 0;
+          }
         }
       }
 
@@ -6495,7 +6549,6 @@ input {
 
       &-wrapper {
         position: relative;
-        z-index: -1;
 
         .map {
           min-height: 350px;
@@ -6879,21 +6932,10 @@ input {
 
       &__right {
         display: none;
-      }
 
-      &-wrapper {
-        .main-page {
-          &__card {
-            &__info-area {
-              &__button {
-                margin-top: 10px;
-                margin-bottom: 0;
-
-                &.bottom {
-                  display: flex;
-                }
-              }
-            }
+        &__button {
+          &.bottom {
+            display: flex;
           }
         }
       }
@@ -7612,6 +7654,21 @@ input {
       flex-direction: column;
       height: unset;
 
+      &.rtl {
+        flex-direction: column;
+
+        .banner {
+          &__card {
+            &__pic {
+              &-area {
+                height: 200px;
+                border-radius: 12px 12px 0 0;
+              }
+            }
+          }
+        }
+      }
+
       &__pic {
         &-area {
           height: 200px;
@@ -7704,10 +7761,6 @@ input {
       padding-top: 0;
       padding-bottom: 30px;
     }
-  }
-
-  .btn-ymaps {
-    display: flex;
   }
 
   .custom-page {
@@ -8325,12 +8378,6 @@ input {
     &__side-buttons {
       right: 13px;
       top: 200px;
-
-      button {
-        &.btn-display {
-          display: flex;
-        }
-      }
     }
 
     &__map-weather {
@@ -8711,7 +8758,7 @@ input {
   }
 }
 
-// turning off hovers for touch devices
+// turning off hovers for touch devices (body.touch means it's a touch screen device)
 body.touch {
   .custom-card {
     &__pic {
@@ -8725,6 +8772,10 @@ body.touch {
     &__visited {
       transform: scale(1) !important;
     }
+  }
+
+  .btn-display {
+    display: flex;
   }
 
   .header {
